first draft of downloading data locally

--- a/revamp/200323-revamp_process.ipynb
+++ b/revamp/200323-revamp_process.ipynb
@@ -72,10 +72,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1099 saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "skid = 1099\n",
+    "print(\"%s saved\" % skid)"
+   ]
   },
   {
    "cell_type": "code",
