test saving and loading for a small set of neurons

--- a/revamp/200323-revamp_process.ipynb
+++ b/revamp/200323-revamp_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,20 +72,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from revamp import connect_path as ct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1099 saved\n"
+      "/Users/zhengz11/myscripts/git_clone/pn_kc/test/compact_sk\n"
      ]
     }
    ],
    "source": [
-    "skid = 1099\n",
-    "print(\"%s saved\" % skid)"
+    "fpath = '/Users/zhengz11/myscripts/git_clone/pn_kc/test/'\n",
+    "fpath = \n",
+    "print(fpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "if not os.path.exists(fpath + \"compact_sk\"):\n",
+    "    os.makedirs(fpath + \"compact_sk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/zhengz11/myscripts/git_clone/pn_kc/test/compact_sk/1099'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.join(path, \"%s\" % skid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(path, \"%s\" % skid), 'w+') as f:\n",
+    "    json.dump(bundle, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_compact_sk(connection, skid, path):\n",
+    "    # path = pn_kc/data/\n",
+    "\n",
+    "    # \"nodes\", \"connectors\", \"tags\"\n",
+    "    # for each node,\n",
+    "    # 0: id\n",
+    "    # 1: parent_id\n",
+    "    # 2: user_id\n",
+    "    # 3: x\n",
+    "    # 4: y\n",
+    "    # 5: z\n",
+    "    # 6: radius\n",
+    "    # 7: confidence\n",
+    "    print((\"downloading skeleton %s\" % skid))\n",
+    "    connection.addpath('/%s/%s/1/1/compact-skeleton' % (connection.projectID,\n",
+    "                                                        skid))\n",
+    "    r = connection.get()\n",
+    "    path = path + \"compact_sk/\"\n",
+    "    if not os.path.exists(path):\n",
+    "        os.makedirs(path)\n",
+    "    with open(path + \"%s\" % skid, 'w+') as outfile:\n",
+    "        json.dump(json.loads(r.text), outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_neurons_names(connection, sk_ids, path):\n",
+    "    path = path + \"neurons_names\"\n",
+    "    r = dict(zip(sk_ids, [get_neuron_name(connection, i) for i in sk_ids]))\n",
+    "    with open(path, 'w+') as outfile:\n",
+    "            json.dump(r, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_pre_post_info(connection, pre_skids, post_skids, path, info_file):\n",
+    "    # info_file is one of \"RandomDraw\", \"t1p\", or \"all\"\n",
+    "    connection.addpath('/%s/connector/info' % connection.projectID)\n",
+    "\n",
+    "    opts = {'pre[%s]' % i: pre_skids[i] for i in range(len(pre_skids))}\n",
+    "    opts.update({'post[%s]' % i: post_skids[i]\n",
+    "                         for i in range(len(post_skids))})\n",
+    "    path = path + \"pre_post_info/\"\n",
+    "    if not os.path.exists(path):\n",
+    "        os.makedirs(path)\n",
+    "    r = connection.post(opts)\n",
+    "    data = json.loads(r.text)\n",
+    "    with open(path + info_file, \"w+\") as file:\n",
+    "        json.dump(data, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_pre_post_info(fafb_c, pn_skids, bundle[:10], \"/Users/zhengz11/myscripts/git_clone/pn_kc/test/\", \"testing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2863104, 57349, 57353, 11544074, 16]"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_pn_skids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(path + \"%s\" % t_pn_skids,[0] 'w') as outfile:\n",
+    "    json.dump(json.loads(r.text), outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downloading skeleton 2863104\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/zhengz11/myscripts/git_clone/pn_kc/test/compact_sk/2863104'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-73f17bf75113>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mt_skids\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_compact_sk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfafb_c\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mct\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_annotations_for_skeleton\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfafb_c\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mskids\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/myscripts/git_clone/pn_kc/revamp/connect_path.py\u001b[0m in \u001b[0;36msave_compact_sk\u001b[0;34m(connection, skid, path)\u001b[0m\n\u001b[1;32m     92\u001b[0m     \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconnection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m     \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"compact_sk/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 94\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"%s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mskid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moutfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     95\u001b[0m         \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/zhengz11/myscripts/git_clone/pn_kc/test/compact_sk/2863104'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "path = \"/Users/zhengz11/myscripts/git_clone/pn_kc/test/\"\n",
+    "\n",
+    "t_pn_skids = pn_skids[:5]\n",
+    "t_kc_skids = rd[:5]\n",
+    "\n",
+    "t_skids = t_pn_skids + t_kc_skids\n",
+    "\n",
+    "\n",
+    "for i in t_skids:\n",
+    "    ct.save_compact_sk(fafb_c, i, path)\n",
+    "    ct.save_annotations_for_skeleton(fafb_c, skids, path)\n",
+    "\n"
    ]
   },
   {
@@ -543,7 +746,18 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "\n",
+    "save_neurons_names(fafb_c, t_skids, path)\n",
+    "\n",
+    "save_root_node(fafb_c, t_skids, path)\n",
+    "\n",
+    "save_annotated_annotations(fafb_c, 'glom_class', 'id', path)\n",
+    "\n",
+    "save_annotated_annotations(fafb_c, 'kc_class', 'id', path)\n",
+    "\n",
+    "save_pre_post_info(fafb_c, t_pn_skids, t_kc_skids, 'testing')"
+   ]
   },
   {
    "cell_type": "code",
