--- a/revamp/200323-revamp_process.ipynb
+++ b/revamp/200323-revamp_process.ipynb
@@ -3394,7 +3394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3731,141 +3731,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pn_skids</th>\n",
-       "      <th>num_boutons</th>\n",
-       "      <th>short_glom_name</th>\n",
-       "      <th>significance</th>\n",
-       "      <th>outdegree</th>\n",
-       "      <th>num_claws</th>\n",
-       "      <th>norm_num_boutons</th>\n",
-       "      <th>norm_num_kcs</th>\n",
-       "      <th>norm_num_claws</th>\n",
-       "      <th>color</th>\n",
-       "      <th>community</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>57003</td>\n",
-       "      <td>1</td>\n",
-       "      <td>VM4</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.001980</td>\n",
-       "      <td>0.000799</td>\n",
-       "      <td>0.000779</td>\n",
-       "      <td>black</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>73937</td>\n",
-       "      <td>2</td>\n",
-       "      <td>VL1</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.003960</td>\n",
-       "      <td>0.001119</td>\n",
-       "      <td>0.000935</td>\n",
-       "      <td>black</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>57349</td>\n",
-       "      <td>2</td>\n",
-       "      <td>DA3</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.003960</td>\n",
-       "      <td>0.001119</td>\n",
-       "      <td>0.001091</td>\n",
-       "      <td>black</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>57381</td>\n",
-       "      <td>1</td>\n",
-       "      <td>DA1</td>\n",
-       "      <td>Pheromonal</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.001980</td>\n",
-       "      <td>0.001119</td>\n",
-       "      <td>0.001091</td>\n",
-       "      <td>purple</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>65465</td>\n",
-       "      <td>3</td>\n",
-       "      <td>DA3</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.005941</td>\n",
-       "      <td>0.001119</td>\n",
-       "      <td>0.001091</td>\n",
-       "      <td>black</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    pn_skids  num_boutons short_glom_name significance  outdegree  num_claws  \\\n",
-       "44     57003            1             VM4      Unknown        5.0        5.0   \n",
-       "55     73937            2             VL1      Unknown        7.0        6.0   \n",
-       "1      57349            2             DA3      Unknown        7.0        7.0   \n",
-       "11     57381            1             DA1   Pheromonal        7.0        7.0   \n",
-       "98     65465            3             DA3      Unknown        7.0        7.0   \n",
-       "\n",
-       "    norm_num_boutons  norm_num_kcs  norm_num_claws   color  community  \n",
-       "44          0.001980      0.000799        0.000779   black      False  \n",
-       "55          0.003960      0.001119        0.000935   black      False  \n",
-       "1           0.003960      0.001119        0.001091   black      False  \n",
-       "11          0.001980      0.001119        0.001091  purple      False  \n",
-       "98          0.005941      0.001119        0.001091   black      False  "
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 3326, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-3-eb0170f72476>\", line 7, in <module>\n",
+      "    import mushroom_2to3.analysis_routine as ar\n",
+      "  File \"/Users/zhengz11/myscripts/git_clone/pn_kc/mushroom_2to3/analysis_routine.py\", line 5, in <module>\n",
+      "    from .build_connectivity import *\n",
+      "  File \"/Users/zhengz11/myscripts/git_clone/pn_kc/mushroom_2to3/build_connectivity.py\", line 7, in <module>\n",
+      "    import pandas as pd\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/pandas/__init__.py\", line 55, in <module>\n",
+      "    from pandas.core.api import (\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/pandas/core/api.py\", line 24, in <module>\n",
+      "    from pandas.core.groupby import Grouper, NamedAgg\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/pandas/core/groupby/__init__.py\", line 1, in <module>\n",
+      "    from pandas.core.groupby.generic import (  # noqa: F401\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/pandas/core/groupby/generic.py\", line 44, in <module>\n",
+      "    from pandas.core.frame import DataFrame\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/pandas/core/frame.py\", line 115, in <module>\n",
+      "    from pandas.core.series import Series\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/pandas/core/series.py\", line 84, in <module>\n",
+      "    import pandas.plotting\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/pandas/plotting/__init__.py\", line 59, in <module>\n",
+      "    from pandas.plotting._core import (\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/pandas/plotting/_core.py\", line 17, in <module>\n",
+      "    import pandas.plotting._matplotlib  # noqa\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/pandas/plotting/_matplotlib/__init__.py\", line 3, in <module>\n",
+      "    from pandas.plotting._matplotlib.boxplot import (\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/pandas/plotting/_matplotlib/boxplot.py\", line 4, in <module>\n",
+      "    from matplotlib.artist import setp\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/matplotlib/__init__.py\", line 1099, in <module>\n",
+      "    rcParams = rc_params()\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/matplotlib/__init__.py\", line 940, in rc_params\n",
+      "    fname = matplotlib_fname()\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/matplotlib/__init__.py\", line 746, in matplotlib_fname\n",
+      "    for fname in gen_candidates():\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/matplotlib/__init__.py\", line 735, in gen_candidates\n",
+      "    yield os.path.join(os.getcwd(), 'matplotlibrc')\n",
+      "FileNotFoundError: [Errno 2] No such file or directory\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 2040, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'FileNotFoundError' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 1101, in get_records\n",
+      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 319, in wrapped\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 353, in _fixed_getinnerframes\n",
+      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/inspect.py\", line 1502, in getinnerframes\n",
+      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/inspect.py\", line 1460, in getframeinfo\n",
+      "    filename = getsourcefile(frame) or getfile(frame)\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/inspect.py\", line 696, in getsourcefile\n",
+      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/inspect.py\", line 725, in getmodule\n",
+      "    file = getabsfile(object, _filename)\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/inspect.py\", line 709, in getabsfile\n",
+      "    return os.path.normcase(os.path.abspath(_filename))\n",
+      "  File \"/Users/zhengz11/anaconda3/envs/py37/lib/python3.7/posixpath.py\", line 383, in abspath\n",
+      "    cwd = os.getcwd()\n",
+      "FileNotFoundError: [Errno 2] No such file or directory\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
+     ]
     }
    ],
    "source": [
-    "t6.head()"
+    "import sys\n",
+    "import os\n",
+    "sys.path.append('/Users/zhengz11/myscripts/git_clone/pn_kc/')\n",
+    "\n",
+    "import json\n",
+    "import mushroom_2to3.connect_path as cp\n",
+    "import mushroom_2to3.analysis_routine as ar\n",
+    "\n",
+    "# credential, to delete when push to remote\n",
+    "sys.path.append('/Users/zhengz11/myscripts/mushroom_v9/credential/')\n",
+    "# from fafb_tokens import token\n",
+    "# fafb_c = cp.fafb_connection(token)"
    ]
   },
   {
