minor update of bouton clustering notebook

--- a/revamp/testing.ipynb
+++ b/revamp/testing.ipynb
@@ -46,6 +46,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "113"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ana.conn_data['pn_kc_in_claw_unit'].col_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
    "outputs": [
